[package]
name = "instant-timer"
version = "0.1.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"

description   = "A CountDown implementation that never blocks"
documentation = "https://docs.rs/instant-timer"
repository    = "https://github.com/david-sawatzke/instant-timer"
license       = "MIT/Apache-2.0"
readme        = "README.md"
keywords      = ["embedded-hal-impl"]
categories    = ["embedded"]

[dependencies]
nb = "0.1.1"
void = { version = "1.0.2", default-features = false }

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"
